--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: ${{matrix.crate_name}}
-        path: ./combined_artifacts/${{matrix.crate_name}}
+        path: ~/combined_artifacts/${{matrix.crate_name}}
 
   release:
     runs-on: ubuntu-latest
@@ -71,14 +71,12 @@ jobs:
       id: timestamp
       run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
       
-    - name: Upload crates to release
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: |
-          ~/combined_artifacts/icx-asset
-          ~/combined_artifacts/icx-cert
-          ~/combined_artifacts/icx-proxy
-        asset_name: crates_${{ env.TIMESTAMP }}
-        tag: crates-${{ env.TIMESTAMP }}
-        overwrite: true
+    - name: Set up Git
+      run: |
+        git config user.email "actions@github.com"
+        git config user.name "GitHub Actions"
+
+    - name: Create Release
+      run: |
+        gh release create v1.0.0 ~/combined_artifacts/*
+
