--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Upload Combined Artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: ${{matrix.crate_name}}
+        name: 'Combined Airtifacts'
         path: ./combined_artifacts/${{matrix.crate_name}}
 
   release:
