--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,13 +32,15 @@ jobs:
       
     - name: pre-install
       run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential musl-tools
-          rustup target add x86_64-unknown-linux-musl
-          
+        sudo apt-get update
+        sudo apt-get install -y build-essential musl-tools
+        CRATE_VERSION=$(cargo install --list | grep "${{ matrix.crate_name }}" | cut -d ' ' -f 1)
+        rustup target add x86_64-unknown-linux-musl
+
     - name: Install Dependencies
       run: |
-        cargo install ${{matrix.crate_name}} --target x86_64-unknown-linux-musl
+        cargo install ${{ matrix.crate_name }} --target x86_64-unknown-linux-musl
+        echo "CRATE_VERSION=${CRATE_VERSION}" >> $GITHUB_ENV
     
     - name: Strip Debug Symbols
       run: strip ~/.cargo/bin/${{matrix.crate_name}}
@@ -52,7 +54,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: 'Combined Airtifacts'
-        path: ./combined_artifacts/${{matrix.crate_name}}
+        path: ./combined_artifacts/${{ matrix.crate_name }}_${{ env.CRATE_VERSION }}
 
   release:
     runs-on: ubuntu-latest
@@ -92,7 +94,7 @@ jobs:
     - name: Release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "./combined_artifacts/icx-asset, ./combined_artifacts/icx-cert, ./combined_artifacts/icx-proxy"
+        artifacts: "./combined_artifacts/*"
         tag: crates_${{ env.TIMESTAMP }}
         name: Combined Release
       if: github.event_name == 'push'      
