--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential musl-tools
-        CRATE_VERSION=$(cargo install --list | grep "${{ matrix.crate_name }}" | cut -d ' ' -f 1)
+        CRATE_VERSION=$(cargo metadata --format-version 1 | jq -r ".packages[] | select(.name==\"${{ matrix.crate_name }}\") | .version")
         echo ${{ CRATE_VERSION }}
         rustup target add x86_64-unknown-linux-musl
 
