--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,11 @@ jobs:
     - name: pre-install
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential musl-tools
-        echo "CRATE_VERSION=$(cargo metadata --format-version 1 | jq -r ".packages[] | select(.name==\"${{ matrix.crate_name }}\") | .version")" >> $GITHUB_ENV
-        run: echo "My variable value is $CRATE_VERSION"
+        sudo apt-get install -y build-essential musl-tools        
         rustup target add x86_64-unknown-linux-musl
    
+    - name: Install Dependencies
+      run: |
+        cargo install ${{ matrix.crate_name }} --target x86_64-unknown-linux-musl
+        echo "CRATE_VERSION=$(cargo metadata --format-version 1 | jq -r ".packages[] | select(.name==\"${{ matrix.crate_name }}\") | .version")" >> $GITHUB_ENV
+        run: echo "My variable value is $CRATE_VERSION"
