--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,8 @@ jobs:
     - name: Install Dependencies
       run: |
         cargo install ${{ matrix.crate_name }} --target x86_64-unknown-linux-musl
-      env:
-        CARGO_HOME: ${{ github.workspace }}/cargo
-        PATH: ${{ github.workspace }}/cargo/bin:$PATH
 
     - name: Get Binary Version
       run: |
-        version=$(${{ matrix.crate_name }} --version)
-        echo "Binary Version: $version"
+        CRATE_VERSION=$(${{ matrix.crate_name }} --version)
+        echo "Binary Version: $CRATE_VERSION"
