--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
     - name: pre-install
       run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential musl-tools
+          sudo apt-get install -y build-essential musl-tools libssl-dev
           rustup target add x86_64-unknown-linux-musl
           
     - name: Install Dependencies
