--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,12 +35,10 @@ jobs:
     - name: pre-install
       run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential musl-tools libssl-dev pkg-config
-          rustup target add x86_64-unknown-linux-musl
           
     - name: Install Dependencies
       run: |
-        cargo install ${{matrix.crate_name}} --target x86_64-unknown-linux-musl
+        cargo install ${{matrix.crate_name}}
     
     - name: Strip Debug Symbols
       run: strip ~/.cargo/bin/${{matrix.crate_name}}
@@ -93,7 +91,7 @@ jobs:
     - name: Release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "./combined_artifacts/icx-asset, ./combined_artifacts/icx-cert, ./combined_artifacts/icx-proxy"
+        artifacts: "./combined_artifacts/icx-asset, ./combined_artifacts/icx-cert, ./combined_artifacts/icx-proxy, ./combined_artifacts/sea-orm-cli, ./combined_artifacts/loco-cli"
         tag: crates_${{ env.TIMESTAMP }}
         name: Combined Release
       if: github.event_name == 'push'      
